Hopefully visibility of the main image is now fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ p {
 #main-page-image {
 height: 70vh;
 width: 100%;
-background: url("/assets/images/image-main-page1.jpg") no-repeat center center fixed;
+background: url("../images/image-main-page1.jpg") no-repeat center center fixed;
 background-size: cover;
 -webkit-background-size: cover;
 -moz-background-size: cover;
